fixed overflow issue negating sticky-top

--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	overflow-x: hidden;
+}
+section {
+	overflow-x: auto;
 }
 
 .text-large {
